--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -18,12 +18,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Directory where the update files will be downloaded and stored.
-         WARNING: The application can and will delete any unknown file. -->
-    <string name="download_path" translatable="false">/sdcard/potato_ota/</string>
-
-    <!-- Directory where the downloads will be exported to.
-         The path is relative to the root of the external storage.-->
-    <string name="export_path" translatable="false">POSP updates/</string>
+         WARNING: The application can and will delete any unknown file.
+         Is relative to external storage -->
+    <string name="download_path" translatable="false">potato_ota/</string>
 
     <!--
         Optional placeholders replaced at runtime:
