--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -20,14 +20,14 @@
     <!-- Directory where the update files will be downloaded and stored.
          WARNING: The application can and will delete any unknown file.
          Is relative to external storage -->
-    <string name="download_path" translatable="false">potato_ota/</string>
+    <string name="download_path" translatable="false">PotatoCenter/</string>
 
     <!--
         Optional placeholders replaced at runtime:
           {device} - Device name
           {type} - Build type
     -->
-    <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/PotatoProject/vendor_ota/baked-release/{device}/{type}/update.json</string>
+    <string name="updater_server_url" translatable="false">https://api.potatoproject.co/checkUpdate?device={device}&amp;type={type}</string>
 
     <string name="verification_failed_notification">Verification failed</string>
     <string name="verifying_download_notification">Verifying update</string>
