--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
           {device} - Device name
           {type} - Build type
     -->
-    <string name="updater_server_url" translatable="false">https://api.potatoproject.co/checkUpdate?device={device}&amp;type={type}</string>
+    <string name="updater_server_url" translatable="false">https://api.potatoproject.co/api/ota/builds/?device={device}&amp;build_type={type}</string>
 
     <string name="verification_failed_notification">Verification failed</string>
     <string name="verifying_download_notification">Verifying update</string>
